--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm install && jspm install && jspm bundle src/main.js build.js"
   },
   "author": "",
   "license": "ISC",
